<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_bg">

    <LinearLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/ppgia"
                android:layout_marginTop="10dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorText"
                android:text="@string/email"
                android:textSize="20dp"
                android:layout_marginTop="40dp" />


        <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/login_edittext_bg"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textColorHint="#CCC"
                android:hint="@string/email"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorText"
                android:text="@string/password"
                android:textSize="20dp"
                android:layout_marginTop="20dp"/>

        <EditText
                android:id="@+id/et_senha"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:background="@drawable/login_edittext_bg"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textColorHint="#CCC"
                android:hint="@string/password_hint"/>

        <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/remember_my_password"
                android:textColor="@color/colorText"
                android:theme="@color/colorPrimary"
                android:textSize="12dp"
                android:layout_marginTop="5dp"/>

        <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/login_button_bg"
                android:text="@string/sign_in"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="50dp"
                android:textSize="20dp"
                android:layout_marginRight="50dp"/>

        <Button
                android:id="@+id/btn_registrar_conta"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/login_button_bg"
                android:text="@string/criar_conta"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="50dp"
                android:textSize="20dp"
                android:layout_marginRight="50dp"/>

        <TextView
                android:id="@+id/tv_esqueceu_sua_senha"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/colorText"
                android:textAlignment="center"
                android:text="@string/forgot_your_login_info"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorText"
                android:text="@string/registroEmp"
                android:textSize="15dp"
                android:layout_marginTop="30dp"/>

    </LinearLayout>
</ScrollView>