<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_bg">

    <LinearLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorText"
                android:text="@string/first_name"
                android:textSize="20dp"
                android:layout_marginTop="40dp" />


        <EditText
                android:id="@+id/et_primeiro_nome"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/login_edittext_bg"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textColorHint="#CCC"
                android:hint="@string/first_name"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorText"
                android:text="@string/last_name"
                android:textSize="20dp"
                android:layout_marginTop="20dp"/>

        <EditText
                android:id="@+id/et_sobrenome"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:background="@drawable/login_edittext_bg"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textColorHint="#CCC"
                android:hint="@string/last_name"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorText"
                android:text="@string/email"
                android:textSize="20dp"
                android:layout_marginTop="20dp"/>

        <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:background="@drawable/login_edittext_bg"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textColorHint="#CCC"
                android:hint="@string/email_hint"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorText"
                android:text="@string/password"
                android:textSize="20dp"
                android:layout_marginTop="20dp"/>

        <EditText
                android:id="@+id/et_senha"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:background="@drawable/login_edittext_bg"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textColorHint="#CCC"
                android:hint="@string/password_hint"/>


        <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/login_button_bg"
                android:text="@string/register"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="50dp"
                android:textSize="20dp"
                android:layout_marginRight="50dp"/>


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorText"
                android:text="@string/registroEmp"
                android:textSize="15dp"
                android:layout_marginTop="50dp"/>

    </LinearLayout>
</ScrollView>