<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_bg">

    <LinearLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorText"
                android:text="@string/email"
                android:textSize="20dp"
                android:layout_marginTop="100dp"/>

        <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/login_edittext_bg"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textColorHint="#CCC"
                android:hint="@string/email_hint"/>



        <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/login_button_bg"
                android:text="@string/submeter"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="50dp"
                android:textSize="20dp"
                android:layout_marginRight="50dp"/>


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorText"
                android:text="@string/registroEmp"
                android:textSize="15dp"
                android:layout_marginTop="320dp"/>

    </LinearLayout>
</ScrollView>